Достоверность агрегации свечей и корректность учёта в mock-брокере
MockMarketDataService#uniteCandles усреднял OHLC и объём при склейке свечей
в более крупный интервал. Заменено на агрегацию: open первой свечи, close
последней, high/low - экстремумы прогона, объёмы суммируются. Объём - счётчик,
усреднение занижало его в N раз, из-за чего все бэктесты на интервалах крупнее
MIN_1 считались по неверным ценам и объёмам. Свеча теперь собирается
конструктором, а не Candle.of(Instant, ...), - перестали теряться
volumeBuy/volumeSell и индекс TimePoint.

Исправлены ошибки учёта:

- MockOrderService#registerOrder: условие проверки идемпотентности было
  инвертировано - DUPLICATE_ORDER бросался, когда ключ НЕ найден. Дубликатом
  теперь считается другой ордер, переиспользующий чужой ключ; тот же ордер
  может перерегистрироваться под своим (лимитка сохраняется при постановке и
  повторно при исполнении). Ключ из PostOrderRequest переносится в Order -
  без этого он всегда был свежим UUID и ветка проверки была недостижима.

- AccountBalance#updateMoneyBalance не применял updater, если валюты ещё не
  было в балансе: списание 100 USD с пустого счёта давало +100 USD. Теперь
  отсутствующая валюта трактуется как нулевой баланс, а уход в минус
  отклоняется - на это и был рассчитан try/catch в applyTransaction.

- AccountBalance#applyTransaction никогда не выставлял COMPLETED: успешная
  транзакция навсегда оставалась PENDING.

- MockOrderService#buy/sellInstrument проверяют результат applyTransactions и
  падают с INSUFFICIENT_BALANCE. Без этого отклонённая транзакция всё равно
  приводила к начислению позиции.

- assert заменены на реальные проверки: MockUserService#closeAccount создавал
  ACCOUNT_CLOSED как сообщение ассерта и не бросал его, а при выключенных
  ассертах (дефолт JVM) проверок не было вовсе. То же в AccountBalance для
  знака суммы и количества.

- EventSimulatedOrderService#cancel падал с NPE для ордера, исполнившегося
  сразу и не планировавшего события. Записи 